# update-project

./: .gitignore  LICENSE  README.md  doc.txt  environment.yml  pyproject.toml  requirements.txt  script_hpcpfcinteractions.m  setup.py
archive/: decode_around_update_exploratory.py  decode_bayesian_summary.py  decode_error_summary.py
data/: README.md
diamond-maze-behavior/: calcDiamondMetricsBySess.m  calcDiamondMetricsByTrial.m  calcHistByPosition.m  calcSessionPerformance.m  cleanTeleportEvents.m  concatDiamondMazeSessions.m  concatHistByPosition.m  concatTrialBehavior.m  concatTrialOutcomes.m  debuggingmatlab.m  diamondcalcDiamondMetricsByTrial.m  getDiamondTrackBehavior.m  getDiamondTrackBehaviorMetrics.m  getDiamondTrackPlotInfo.m  getPhaseInds.m  getTrialOutcomes.m  getTrialStartLoc.m  getdefaultdirectorieshpcpfcinteractions.m  getdefaultindiceshpcpfcinteractions.m  loadRawDiamondVirmenFile.m  plotContinuousAltPerformance.m  plotDiamondTrackBehaviorMetrics.m  plotDiamondTrackBoxplotDist.m  plotDiamondTrackCorrectPerformance.m  plotDiamondTrackLicks.m  plotDiamondTrackMetricsByPosition.m  plotDiamondTrackMetricsByPosition_old.m  plotDiamondTrackMetricsBySession.m  plotDiamondTrackMetricsByTrial.m  plotDiamondTrackMetricsByTrialBlock.m  plotDiamondTrackMetricsByTrial_SlidingWindow.m  plotDiamondTrackPosition.m  plotHistByPosition.m  plotViewAngle.m  resampleDiamondMazeTrials.m  test.m
doc/: UpdateTaskDataPipeline.csv  UpdateTaskKilosortSummary.xlsx  VRUpdateTaskEphysSummary.xlsx  documentation_behavior.docx  updatetrainingparadigm_210209.docx  (+1 more)
src/: runall.m
(+255 files in other folders)
